[package]
name = "xcommunity-bot"
version = "0.1.0"
edition = "2021"

[features]
default = ["postgres"]
postgres = ["dep:tokio-postgres"]
sqlite = ["dep:rusqlite"]

[dependencies]
# Async Runtime
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID for subscription IDs
uuid = { version = "1.10", features = ["v4", "serde"] }

# Environment
dotenvy = "0.15"

# Database - PostgreSQL (Supabase)
tokio-postgres = { version = "0.7", optional = true }
deadpool-postgres = { version = "0.14", optional = true }

# Database - SQLite (local development)
rusqlite = { version = "0.32", features = ["bundled", "chrono"], optional = true }
chrono = { version = "0.4", features = ["serde"] }

# HTTP Client for X API
reqwest = { version = "0.12", features = ["json"] }

# Config file parsing
config = "0.14"
